# libjpeg-turbo

./: .gitattributes  .gitignore  .travis.yml  BUILDING.md  Brewfile  CMakeLists.txt  ChangeLog.md  ChangeLog.txt  LICENSE.md  Makefile.am  Makefile.in  README  README-turbo.txt  README.ijg  README.md  acinclude.m4  aclocal.m4  appveyor.yml  azure-pipelines.yml  bmp.c  bmpsizetest.c  cdaltui.txt  cderror.h  cdjpeg.c  cdjpeg.h  cjpeg.1  cjpeg.c  cjpegalt.c  cmyk.h  configure  configure.ac  croptest.in  djpeg.c  djpegalt.c  esy-build.sh  install.txt  jaricom.c  jcapimin.c  jcapistd.c  jcarith.c  (+156 more)
.ci/: build.yaml
.github/: CONTRIBUTING.md  SECURITY.md
.github/workflows/: build.yml  build_sigmastar.yml  cifuzz.yml
cmake/: jconfig.h.in
cmakescripts/: BuildPackages.cmake  GNUInstallDirs.cmake  GenerateWrappers.cmake  LibJpegTurboConfig.cmake.in  PackageInfo.cmake  testclean.cmake  tjbenchtest.cmake  tjexampletest.cmake
doc/: cjpeg.1  djpeg.1  doxygen.config  jpegtran.1  libjpeg.txt  usage.txt
doc/html/: annotated.html  classes.html  functions.html  functions_vars.html  group___turbo_j_p_e_g.html  index.html  modules.html  structtjregion.html  structtjscalingfactor.html  structtjtransform.html  topics.html
doc/turbojpeg/: annotated.html  classes.html  functions.html  functions_vars.html  group___turbo_j_p_e_g.html  index.html  structtjregion.html  structtjscalingfactor.html  structtjtransform.html  topics.html
esy.lock/: index.json
fuzz/: CMakeLists.txt  build.sh  cjpeg.cc  coefficient.cc  compress.cc  compress12.cc  compress12_lossless.cc  compress16_lossless.cc  compress_libjpeg.cc  compress_lossless.cc  compress_raw_data.cc  compress_yuv.cc  decompress.cc  decompress_libjpeg.cc  decompress_yuv.cc  error_recovery.cc  fuzzer.options  generate_corpus.sh  jpeg.dict  marker.cc  partial.cc  progressive.cc  raw_data.cc  resync.cc  transcode.cc  transform.cc
java/: CMakeLists.txt  MANIFEST.MF  README  README.md  TJBench.java  TJComp.java  TJDecomp.java  TJExample.java  TJTran.java  TJUnitTest.java  org_libjpegturbo_turbojpeg_TJ.h  org_libjpegturbo_turbojpeg_TJCompressor.h  org_libjpegturbo_turbojpeg_TJDecompressor.h  org_libjpegturbo_turbojpeg_TJTransformer.h  turbojpeg-jni.c
java/doc/: allclasses-frame.html  allclasses-index.html  allclasses-noframe.html  allclasses.html  allpackages-index.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  member-search-index.js  overview-tree.html  serialized-form.html
jna/: CMakeLists.txt  README.md  TJ.java  TJBench.java  TJComp.java  TJDecomp.java  TJTran.java  TJUnitTest.java
md5/: CMakeLists.txt  endian.h  md5.c  md5hl.c
release/: Distribution.xml.in  ReadMe.txt  deb-control.in  installer.nsi.in  libjpeg-turbo.nsi.in  libjpeg-turbo.spec.in  libjpeg.pc.in  libturbojpeg.pc.in  makecygwinpkg.in  makedpkg.in  makemacpkg.in  makerpm.in  makesrpm.in  rpm.spec.in  uninstall.in
sharedlib/: CMakeLists.txt  version.rc.in
sharedlib/spng/: CMakeLists.txt
simd/: CMakeLists.txt  Makefile.am  README.md  jcclrmmi_loongson.c  jccolext-avx2-64.asm  jccolor-avx2-64.asm  jcgray-avx2-64.asm  jcgryext-avx2-64.asm  jchuff-avx2-64.asm  jchuff-avx2.asm  jchuff-sse2-64.asm  jchuff-sse2.asm  jchuff-ssse3-64.asm  jchuff-ssse3.asm  jcolsamp.inc  jcsample-avx2-64.asm  jdclrmmi_loongson.c  jdcolext-avx2-64.asm  jdcolor-avx2-64.asm  jdct.inc  jdmerge-avx2-64.asm  jdmrgext-avx2-64.asm  jdsample-avx2-64.asm  jfdctflt-avx2-64.asm  jfdctmflt-avx2-64.asm  jfdctmfst-avx2-64.asm  jfdctmint-avx2-64.asm  jidctflt-avx2-64.asm  jidctfst-avx2-64.asm  jidctint-avx2-64.asm  jquantf-avx2-64.asm  jsimd.c  jsimd.h  jsimd_arm.c  jsimd_arm64.c  jsimd_arm64_neon.S  jsimd_arm_neon.S  jsimd_i386.c  jsimd_loongson.c  jsimd_loongson_mmi.c  (+11 more)
simd/arm/: jccolext-sve2.c  jccolor-neon.c  jccolor-sve2.c  jcgray-neon.c  jcgryext-neon.c  jchuff.h  jcphuff-neon.c  jcsample-neon.c  jdcolext-neon.c  jdcolext-sve2.c  jdcolor-neon.c  jdcolor-sve2.c  jdmerge-neon.c  jdmrgext-neon.c  jdsample-neon.c  jfdctfst-neon.c  jfdctint-neon.c  jidctfst-neon.c  jidctint-neon.c  jidctred-neon.c  jquanti-neon.c  jsimd.c  jsimd_arm.c  jsimd_neon.S  jsimd_neon_arm.S  neon-compat.h.in
simd/arm64/: jsimd.c  jsimd_neon.S  jsimd_neon_arm64.S
simd/e2k/: jccolext-e2k.c  jccolor-e2k.c  jcgray-e2k.c  jcgryext-e2k.c  jcsample-e2k.c  jdcolext-e2k.c  jdcolor-e2k.c  jdmerge-e2k.c  jdmrgext-e2k.c  jdsample-e2k.c  jfdctflt-e2k.c  jfdctfst-e2k.c  jfdctint-e2k.c  jidctflt-e2k.c  jidctfst-e2k.c  jidctint-e2k.c  jquantf-e2k.c  jquanti-e2k.c  jsimd.c  jsimd_api_e2k.h  jsimd_e2k.h
simd/i386/: jccolext-avx2.asm  jccolext-mmx.asm  jccolext-sse2.asm  jccolor-avx2.asm  jccolor-mmx.asm  jccolor-sse2.asm  jcgray-avx2.asm  jcgray-mmx.asm  jcgray-sse2.asm  jcgryext-avx2.asm  jcgryext-mmx.asm  jcgryext-sse2.asm  jchuff-avx2.asm  jchuff-sse2.asm  jcphuff-sse2.asm  jcsample-avx2.asm  jcsample-mmx.asm  jcsample-sse2.asm  jdcolext-avx2.asm  jdcolext-mmx.asm  jdcolext-sse2.asm  jdcolor-avx2.asm  jdcolor-mmx.asm  jdcolor-sse2.asm  jdmerge-avx2.asm  jdmerge-mmx.asm  jdmerge-sse2.asm  jdmrgext-avx2.asm  jdmrgext-mmx.asm  jdmrgext-sse2.asm  jdsample-avx2.asm  jdsample-mmx.asm  jdsample-sse2.asm  jfdctflt-3dn.asm  jfdctflt-sse.asm  (+25 more)
src/: bmpsizetest.c  cderror.h  cjpeg.c  djpeg.c  hufftest.c  jcarith.c  jccoefct.c  jccolor.c  jcdctmgr.c  jchuff.c  jcmaster.c  jcomapi.c  jconfigint.h.in  jcphuff.c  jcprepct.c  jcsample.c  jcstest.c  jdapimin.c  jdapistd.c  jdatadst-tj.c  jdatadst.c  jdcoefct.c  jdcolor.c  jddctmgr.c  jdhuff.c  jdinput.c  jdmaster.c  jdmaster.h  jdmerge.c  jdsample.c  jerror.h  jpegint.h  jpeglib.h  jpegtran.c  jquant1.c  jquant2.c  jsimd.h  jsimddct.h  jversion.h.in  rdbmp.c  (+23 more)
src/spng/: CMakeLists.txt  miniz.c  spng.c
src/spng/zlib/: zconf.h
test/: croptest.in  indexedcolortest.in  tjbenchtest.in  tjcomptest.in  tjdecomptest.in  tjexampletest.in  tjtrantest.in
testimages/: big_building16.pgm  testorig.pgm
win/: jconfig.h.in  jconfigint.h.in  jpeg.rc.in  jpeg62-memsrcdst.def  jpeg62.def  jpeg7-memsrcdst.def  jpeg7.def  jpeg8.def  projectTargets.cmake.in  turbojpeg.rc.in
(+273 files in other folders)
